grammaire_while/whileParser.java
// $ANTLR 3.5.3 while.g 2023-12-01 09:48:24

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class whileParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMANDES", "CONDITION", "CONS", 
		"DEFINITION", "DO", "Dec", "ELSE", "EXPR", "FONCTION", "FOR", "FOREACH", 
		"IF", "IN", "Maj", "Min", "NOM", "NOP", "OUTPUT", "READ", "Symbol", "THEN", 
		"VARIABLE", "Variable", "WHILE", "'%'", "'('", "')'", "','", "':'", "':='", 
		"';'", "'=?'", "'cons'", "'do'", "'else'", "'fi'", "'for'", "'foreach'", 
		"'function'", "'hd'", "'if'", "'in'", "'list'", "'nil'", "'nop'", "'od'", 
		"'read'", "'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int COMMANDES=4;
	public static final int CONDITION=5;
	public static final int CONS=6;
	public static final int DEFINITION=7;
	public static final int DO=8;
	public static final int Dec=9;
	public static final int ELSE=10;
	public static final int EXPR=11;
	public static final int FONCTION=12;
	public static final int FOR=13;
	public static final int FOREACH=14;
	public static final int IF=15;
	public static final int IN=16;
	public static final int Maj=17;
	public static final int Min=18;
	public static final int NOM=19;
	public static final int NOP=20;
	public static final int OUTPUT=21;
	public static final int READ=22;
	public static final int Symbol=23;
	public static final int THEN=24;
	public static final int VARIABLE=25;
	public static final int Variable=26;
	public static final int WHILE=27;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public whileParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public whileParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return whileParser.tokenNames; }
	@Override public String getGrammarFileName() { return "while.g"; }


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// while.g:37:1: input : inputSub -> ^( inputSub ) ;
	public final whileParser.input_return input() throws RecognitionException {
		whileParser.input_return retval = new whileParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputSub1 =null;

		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");

		try {
			// while.g:37:7: ( inputSub -> ^( inputSub ) )
			// while.g:37:9: inputSub
			{
			pushFollow(FOLLOW_inputSub_in_input154);
			inputSub1=inputSub();
			state._fsp--;

			stream_inputSub.add(inputSub1.getTree());

			// AST REWRITE
			// elements: inputSub
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 37:18: -> ^( inputSub )
			{
				// while.g:37:21: ^( inputSub )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_inputSub.nextNode(), root_1);
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class inputSub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inputSub"
	// while.g:38:1: inputSub : Variable ( ',' inputSub )? ;
	public final whileParser.inputSub_return inputSub() throws RecognitionException {
		whileParser.inputSub_return retval = new whileParser.inputSub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable2=null;
		Token char_literal3=null;
		ParserRuleReturnScope inputSub4 =null;

		Object Variable2_tree=null;
		Object char_literal3_tree=null;

		try {
			// while.g:38:9: ( Variable ( ',' inputSub )? )
			// while.g:38:11: Variable ( ',' inputSub )?
			{
			root_0 = (Object)adaptor.nil();


			Variable2=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub166); 
			Variable2_tree = (Object)adaptor.create(Variable2);
			adaptor.addChild(root_0, Variable2_tree);

			// while.g:38:20: ( ',' inputSub )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==31) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// while.g:38:21: ',' inputSub
					{
					char_literal3=(Token)match(input,31,FOLLOW_31_in_inputSub169); 
					char_literal3_tree = (Object)adaptor.create(char_literal3);
					adaptor.addChild(root_0, char_literal3_tree);

					pushFollow(FOLLOW_inputSub_in_inputSub171);
					inputSub4=inputSub();
					state._fsp--;

					adaptor.addChild(root_0, inputSub4.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "inputSub"


	public static class output_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "output"
	// while.g:39:1: output : Variable ( ',' output )? ;
	public final whileParser.output_return output() throws RecognitionException {
		whileParser.output_return retval = new whileParser.output_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable5=null;
		Token char_literal6=null;
		ParserRuleReturnScope output7 =null;

		Object Variable5_tree=null;
		Object char_literal6_tree=null;

		try {
			// while.g:39:8: ( Variable ( ',' output )? )
			// while.g:39:10: Variable ( ',' output )?
			{
			root_0 = (Object)adaptor.nil();


			Variable5=(Token)match(input,Variable,FOLLOW_Variable_in_output180); 
			Variable5_tree = (Object)adaptor.create(Variable5);
			adaptor.addChild(root_0, Variable5_tree);

			// while.g:39:19: ( ',' output )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==31) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// while.g:39:20: ',' output
					{
					char_literal6=(Token)match(input,31,FOLLOW_31_in_output183); 
					char_literal6_tree = (Object)adaptor.create(char_literal6);
					adaptor.addChild(root_0, char_literal6_tree);

					pushFollow(FOLLOW_output_in_output185);
					output7=output();
					state._fsp--;

					adaptor.addChild(root_0, output7.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "output"


	public static class exprBase_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "exprBase"
	// while.g:41:1: exprBase : ( ( '(' 'hd' exprBase ')' -> 'hd' ^( exprBase ) | '(' 'tl' exprBase ')' -> 'tl' ^( exprBase ) ) | ( 'nil' | Variable -> ^( Variable ) | Symbol -> ^( Symbol ) ) | ( '(' 'cons' lExpr ')' -> lExpr | '(' 'list' ( lExpr )? ')' ) -> ( lExpr )? | ( '(' Symbol ( lExpr )? ')' -> ^( EXPR Symbol ( lExpr )? ) ) );
	public final whileParser.exprBase_return exprBase() throws RecognitionException {
		whileParser.exprBase_return retval = new whileParser.exprBase_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal8=null;
		Token string_literal9=null;
		Token char_literal11=null;
		Token char_literal12=null;
		Token string_literal13=null;
		Token char_literal15=null;
		Token string_literal16=null;
		Token Variable17=null;
		Token Symbol18=null;
		Token char_literal19=null;
		Token string_literal20=null;
		Token char_literal22=null;
		Token char_literal23=null;
		Token string_literal24=null;
		Token char_literal26=null;
		Token char_literal27=null;
		Token Symbol28=null;
		Token char_literal30=null;
		ParserRuleReturnScope exprBase10 =null;
		ParserRuleReturnScope exprBase14 =null;
		ParserRuleReturnScope lExpr21 =null;
		ParserRuleReturnScope lExpr25 =null;
		ParserRuleReturnScope lExpr29 =null;

		Object char_literal8_tree=null;
		Object string_literal9_tree=null;
		Object char_literal11_tree=null;
		Object char_literal12_tree=null;
		Object string_literal13_tree=null;
		Object char_literal15_tree=null;
		Object string_literal16_tree=null;
		Object Variable17_tree=null;
		Object Symbol18_tree=null;
		Object char_literal19_tree=null;
		Object string_literal20_tree=null;
		Object char_literal22_tree=null;
		Object char_literal23_tree=null;
		Object string_literal24_tree=null;
		Object char_literal26_tree=null;
		Object char_literal27_tree=null;
		Object Symbol28_tree=null;
		Object char_literal30_tree=null;
		RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
		RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
		RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleSubtreeStream stream_exprBase=new RewriteRuleSubtreeStream(adaptor,"rule exprBase");
		RewriteRuleSubtreeStream stream_lExpr=new RewriteRuleSubtreeStream(adaptor,"rule lExpr");

		try {
			// while.g:41:9: ( ( '(' 'hd' exprBase ')' -> 'hd' ^( exprBase ) | '(' 'tl' exprBase ')' -> 'tl' ^( exprBase ) ) | ( 'nil' | Variable -> ^( Variable ) | Symbol -> ^( Symbol ) ) | ( '(' 'cons' lExpr ')' -> lExpr | '(' 'list' ( lExpr )? ')' ) -> ( lExpr )? | ( '(' Symbol ( lExpr )? ')' -> ^( EXPR Symbol ( lExpr )? ) ) )
			int alt8=4;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==29) ) {
				switch ( input.LA(2) ) {
				case 43:
				case 52:
					{
					alt8=1;
					}
					break;
				case 36:
				case 46:
					{
					alt8=3;
					}
					break;
				case Symbol:
					{
					alt8=4;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}
			else if ( (LA8_0==Symbol||LA8_0==Variable||LA8_0==47) ) {
				alt8=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// while.g:41:11: ( '(' 'hd' exprBase ')' -> 'hd' ^( exprBase ) | '(' 'tl' exprBase ')' -> 'tl' ^( exprBase ) )
					{
					// while.g:41:11: ( '(' 'hd' exprBase ')' -> 'hd' ^( exprBase ) | '(' 'tl' exprBase ')' -> 'tl' ^( exprBase ) )
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==29) ) {
						int LA3_1 = input.LA(2);
						if ( (LA3_1==43) ) {
							alt3=1;
						}
						else if ( (LA3_1==52) ) {
							alt3=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 3, 1, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						throw nvae;
					}

					switch (alt3) {
						case 1 :
							// while.g:41:12: '(' 'hd' exprBase ')'
							{
							char_literal8=(Token)match(input,29,FOLLOW_29_in_exprBase195);  
							stream_29.add(char_literal8);

							string_literal9=(Token)match(input,43,FOLLOW_43_in_exprBase197);  
							stream_43.add(string_literal9);

							pushFollow(FOLLOW_exprBase_in_exprBase199);
							exprBase10=exprBase();
							state._fsp--;

							stream_exprBase.add(exprBase10.getTree());
							char_literal11=(Token)match(input,30,FOLLOW_30_in_exprBase201);  
							stream_30.add(char_literal11);


							// AST REWRITE
							// elements: exprBase, 43
							// token labels: 
							// rule labels: retval
							// token list labels: 
							// rule list labels: 
							// wildcard labels: 
							retval.tree = root_0;
							RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

							root_0 = (Object)adaptor.nil();
							// 41:34: -> 'hd' ^( exprBase )
							{
								adaptor.addChild(root_0, stream_43.nextNode());
								// while.g:41:42: ^( exprBase )
								{
								Object root_1 = (Object)adaptor.nil();
								root_1 = (Object)adaptor.becomeRoot(stream_exprBase.nextNode(), root_1);
								adaptor.addChild(root_0, root_1);
								}

							}


							retval.tree = root_0;

							}
							break;
						case 2 :
							// while.g:41:55: '(' 'tl' exprBase ')'
							{
							char_literal12=(Token)match(input,29,FOLLOW_29_in_exprBase212);  
							stream_29.add(char_literal12);

							string_literal13=(Token)match(input,52,FOLLOW_52_in_exprBase214);  
							stream_52.add(string_literal13);

							pushFollow(FOLLOW_exprBase_in_exprBase216);
							exprBase14=exprBase();
							state._fsp--;

							stream_exprBase.add(exprBase14.getTree());
							char_literal15=(Token)match(input,30,FOLLOW_30_in_exprBase218);  
							stream_30.add(char_literal15);


							// AST REWRITE
							// elements: 52, exprBase
							// token labels: 
							// rule labels: retval
							// token list labels: 
							// rule list labels: 
							// wildcard labels: 
							retval.tree = root_0;
							RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

							root_0 = (Object)adaptor.nil();
							// 41:77: -> 'tl' ^( exprBase )
							{
								adaptor.addChild(root_0, stream_52.nextNode());
								// while.g:41:85: ^( exprBase )
								{
								Object root_1 = (Object)adaptor.nil();
								root_1 = (Object)adaptor.becomeRoot(stream_exprBase.nextNode(), root_1);
								adaptor.addChild(root_0, root_1);
								}

							}


							retval.tree = root_0;

							}
							break;

					}

					}
					break;
				case 2 :
					// while.g:43:3: ( 'nil' | Variable -> ^( Variable ) | Symbol -> ^( Symbol ) )
					{
					// while.g:43:3: ( 'nil' | Variable -> ^( Variable ) | Symbol -> ^( Symbol ) )
					int alt4=3;
					switch ( input.LA(1) ) {
					case 47:
						{
						alt4=1;
						}
						break;
					case Variable:
						{
						alt4=2;
						}
						break;
					case Symbol:
						{
						alt4=3;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 4, 0, input);
						throw nvae;
					}
					switch (alt4) {
						case 1 :
							// while.g:43:4: 'nil'
							{
							string_literal16=(Token)match(input,47,FOLLOW_47_in_exprBase237);  
							stream_47.add(string_literal16);

							}
							break;
						case 2 :
							// while.g:43:12: Variable
							{
							Variable17=(Token)match(input,Variable,FOLLOW_Variable_in_exprBase241);  
							stream_Variable.add(Variable17);


							// AST REWRITE
							// elements: Variable
							// token labels: 
							// rule labels: retval
							// token list labels: 
							// rule list labels: 
							// wildcard labels: 
							retval.tree = root_0;
							RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

							root_0 = (Object)adaptor.nil();
							// 43:21: -> ^( Variable )
							{
								// while.g:43:24: ^( Variable )
								{
								Object root_1 = (Object)adaptor.nil();
								root_1 = (Object)adaptor.becomeRoot(stream_Variable.nextNode(), root_1);
								adaptor.addChild(root_0, root_1);
								}

							}


							retval.tree = root_0;

							}
							break;
						case 3 :
							// while.g:43:38: Symbol
							{
							Symbol18=(Token)match(input,Symbol,FOLLOW_Symbol_in_exprBase251);  
							stream_Symbol.add(Symbol18);


							// AST REWRITE
							// elements: Symbol
							// token labels: 
							// rule labels: retval
							// token list labels: 
							// rule list labels: 
							// wildcard labels: 
							retval.tree = root_0;
							RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

							root_0 = (Object)adaptor.nil();
							// 43:45: -> ^( Symbol )
							{
								// while.g:43:48: ^( Symbol )
								{
								Object root_1 = (Object)adaptor.nil();
								root_1 = (Object)adaptor.becomeRoot(stream_Symbol.nextNode(), root_1);
								adaptor.addChild(root_0, root_1);
								}

							}


							retval.tree = root_0;

							}
							break;

					}

					}
					break;
				case 3 :
					// while.g:44:5: ( '(' 'cons' lExpr ')' -> lExpr | '(' 'list' ( lExpr )? ')' )
					{
					// while.g:44:5: ( '(' 'cons' lExpr ')' -> lExpr | '(' 'list' ( lExpr )? ')' )
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==29) ) {
						int LA6_1 = input.LA(2);
						if ( (LA6_1==36) ) {
							alt6=1;
						}
						else if ( (LA6_1==46) ) {
							alt6=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 6, 1, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 6, 0, input);
						throw nvae;
					}

					switch (alt6) {
						case 1 :
							// while.g:44:6: '(' 'cons' lExpr ')'
							{
							char_literal19=(Token)match(input,29,FOLLOW_29_in_exprBase266);  
							stream_29.add(char_literal19);

							string_literal20=(Token)match(input,36,FOLLOW_36_in_exprBase268);  
							stream_36.add(string_literal20);

							pushFollow(FOLLOW_lExpr_in_exprBase270);
							lExpr21=lExpr();
							state._fsp--;

							stream_lExpr.add(lExpr21.getTree());
							char_literal22=(Token)match(input,30,FOLLOW_30_in_exprBase272);  
							stream_30.add(char_literal22);


							// AST REWRITE
							// elements: lExpr
							// token labels: 
							// rule labels: retval
							// token list labels: 
							// rule list labels: 
							// wildcard labels: 
							retval.tree = root_0;
							RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

							root_0 = (Object)adaptor.nil();
							// 44:27: -> lExpr
							{
								adaptor.addChild(root_0, stream_lExpr.nextTree());
							}


							retval.tree = root_0;

							}
							break;
						case 2 :
							// while.g:44:38: '(' 'list' ( lExpr )? ')'
							{
							char_literal23=(Token)match(input,29,FOLLOW_29_in_exprBase280);  
							stream_29.add(char_literal23);

							string_literal24=(Token)match(input,46,FOLLOW_46_in_exprBase282);  
							stream_46.add(string_literal24);

							// while.g:44:49: ( lExpr )?
							int alt5=2;
							int LA5_0 = input.LA(1);
							if ( (LA5_0==Symbol||LA5_0==Variable||LA5_0==29||LA5_0==47) ) {
								alt5=1;
							}
							switch (alt5) {
								case 1 :
									// while.g:44:50: lExpr
									{
									pushFollow(FOLLOW_lExpr_in_exprBase285);
									lExpr25=lExpr();
									state._fsp--;

									stream_lExpr.add(lExpr25.getTree());
									}
									break;

							}

							char_literal26=(Token)match(input,30,FOLLOW_30_in_exprBase289);  
							stream_30.add(char_literal26);

							}
							break;

					}


					// AST REWRITE
					// elements: lExpr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 44:63: -> ( lExpr )?
					{
						// while.g:44:66: ( lExpr )?
						if ( stream_lExpr.hasNext() ) {
							adaptor.addChild(root_0, stream_lExpr.nextTree());
						}
						stream_lExpr.reset();

					}


					retval.tree = root_0;

					}
					break;
				case 4 :
					// while.g:46:3: ( '(' Symbol ( lExpr )? ')' -> ^( EXPR Symbol ( lExpr )? ) )
					{
					// while.g:46:3: ( '(' Symbol ( lExpr )? ')' -> ^( EXPR Symbol ( lExpr )? ) )
					// while.g:46:4: '(' Symbol ( lExpr )? ')'
					{
					char_literal27=(Token)match(input,29,FOLLOW_29_in_exprBase305);  
					stream_29.add(char_literal27);

					Symbol28=(Token)match(input,Symbol,FOLLOW_Symbol_in_exprBase307);  
					stream_Symbol.add(Symbol28);

					// while.g:46:15: ( lExpr )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==Symbol||LA7_0==Variable||LA7_0==29||LA7_0==47) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// while.g:46:16: lExpr
							{
							pushFollow(FOLLOW_lExpr_in_exprBase310);
							lExpr29=lExpr();
							state._fsp--;

							stream_lExpr.add(lExpr29.getTree());
							}
							break;

					}

					char_literal30=(Token)match(input,30,FOLLOW_30_in_exprBase314);  
					stream_30.add(char_literal30);


					// AST REWRITE
					// elements: lExpr, Symbol
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 46:28: -> ^( EXPR Symbol ( lExpr )? )
					{
						// while.g:46:31: ^( EXPR Symbol ( lExpr )? )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(EXPR, "EXPR"), root_1);
						adaptor.addChild(root_1, stream_Symbol.nextNode());
						// while.g:46:45: ( lExpr )?
						if ( stream_lExpr.hasNext() ) {
							adaptor.addChild(root_1, stream_lExpr.nextTree());
						}
						stream_lExpr.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exprBase"


	public static class expression_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// while.g:48:1: expression : exprBase ( '=?' exprBase )? ;
	public final whileParser.expression_return expression() throws RecognitionException {
		whileParser.expression_return retval = new whileParser.expression_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal32=null;
		ParserRuleReturnScope exprBase31 =null;
		ParserRuleReturnScope exprBase33 =null;

		Object string_literal32_tree=null;

		try {
			// while.g:49:2: ( exprBase ( '=?' exprBase )? )
			// while.g:49:4: exprBase ( '=?' exprBase )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_exprBase_in_expression337);
			exprBase31=exprBase();
			state._fsp--;

			adaptor.addChild(root_0, exprBase31.getTree());

			// while.g:49:13: ( '=?' exprBase )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==35) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// while.g:49:14: '=?' exprBase
					{
					string_literal32=(Token)match(input,35,FOLLOW_35_in_expression340); 
					string_literal32_tree = (Object)adaptor.create(string_literal32);
					adaptor.addChild(root_0, string_literal32_tree);

					pushFollow(FOLLOW_exprBase_in_expression342);
					exprBase33=exprBase();
					state._fsp--;

					adaptor.addChild(root_0, exprBase33.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class lExpr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "lExpr"
	// while.g:51:1: lExpr : exprBase lExpr ;
	public final whileParser.lExpr_return lExpr() throws RecognitionException {
		whileParser.lExpr_return retval = new whileParser.lExpr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope exprBase34 =null;
		ParserRuleReturnScope lExpr35 =null;


		try {
			// while.g:51:7: ( exprBase lExpr )
			// while.g:51:9: exprBase lExpr
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_exprBase_in_lExpr355);
			exprBase34=exprBase();
			state._fsp--;

			adaptor.addChild(root_0, exprBase34.getTree());

			pushFollow(FOLLOW_lExpr_in_lExpr357);
			lExpr35=lExpr();
			state._fsp--;

			adaptor.addChild(root_0, lExpr35.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "lExpr"


	public static class vars_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vars"
	// while.g:53:1: vars : v1= Variable ( ',' v2= Variable )* -> ^( VARIABLE $v1 ( $v2)* ) ;
	public final whileParser.vars_return vars() throws RecognitionException {
		whileParser.vars_return retval = new whileParser.vars_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token v1=null;
		Token v2=null;
		Token char_literal36=null;
